# cargo-feature-guard

./: .mcp.json  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: cicd-workflow-engineer.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: auto-tag.yml  ci.yml  release-pr.yml  release.yml
.serena/: project.yml
src/: main.rs
