[package]
name = "cargo-feature-guard"
version = "0.4.0"
edition = "2024"
description = "Validate Cargo feature propagation, detect forbidden features, and find duplicate dependencies"
license = "MIT"
repository = "https://github.com/xdm67x/cargo-feature-guard"
keywords = ["cargo", "features", "lint", "workspace", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-feature-guard"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
inefficient_to_string = "deny"
module_inception = "deny"
perf = { level = "deny", priority = -1 }
single_char_pattern = "deny"
todo = "deny"

[lints.rust]
